[package]
name                  = "veryl-simulator"
version               = "0.20.2"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description.workspace = true
edition.workspace     = true

[dependencies]
clap                = {workspace = true}
daggy               = {workspace = true}
fst-writer          = {workspace = true}
fxhash              = {workspace = true}
indent              = {workspace = true}
log                 = {workspace = true}
miette              = {workspace = true}
serde_json          = {workspace = true}
smallvec            = {workspace = true}
thiserror           = {workspace = true}
num-bigint          = {workspace = true}
num-traits          = {workspace = true}
rand                = {workspace = true}
rand_pcg            = {workspace = true}
toml                = {workspace = true}
twox-hash           = {workspace = true}
vcd                 = {workspace = true}
veryl-analyzer      = {version = "0.20.2", path = "../analyzer"}
veryl-component-sys = {version = "0.1.0", path = "../component/sys"}
veryl-metadata      = {version = "0.20.2", path = "../metadata"}
veryl-parser        = {version = "0.20.2", path = "../parser"}
veryl-path          = {version = "0.20.2", path = "../path"}

[target.'cfg(not(target_family = "wasm"))'.dependencies]
cranelift      = "0.134.1"
libloading     = "0.9"
memmap2        = "0.9.9"
target-lexicon = "0.13.4"
# Must track cranelift above (cranelift 0.134 <-> wasmtime 47) or
# cranelift-codegen compiles twice; CI (cargo_deny) enforces it.
wasmtime       = {version = "47.0", default-features = false, features = ["runtime", "cranelift", "std"]}

[dev-dependencies]
criterion       = {workspace = true}
mimalloc        = "0.1"
veryl-component = {version = "0.1.0", path = "../component"}
wellen          = "0.25.5"

[target.'cfg(target_os = "linux")'.dev-dependencies]
pprof = {workspace = true}

[features]
profile = []

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "heliodor_boot"
harness = false
