[package]
name                  = "veryl-sourcemap"
version               = "0.17.2"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description.workspace = true
edition.workspace     = true

[dependencies]
miette        = {workspace = true}
relative-path = "2.0"
sourcemap     = "9.3"
thiserror     = {workspace = true}
