[package]
name                  = "statistics"
version               = "0.1.0"
edition               = "2021"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow     = {workspace = true}
clap       = {workspace = true}
chrono     = {version = "0.4.35", features = ["serde"]}
http       = "1.1"
octocrab   = "0.36.0"
plotters   = "0.3.5"
secrecy    = "0.8.0"
serde      = {workspace = true}
serde_json = {workspace = true}
tokio      = "1.36"

[package.metadata.release]
release = false
