[package]
name                  = "veryl-std"
version               = "0.13.4"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description.workspace = true
edition               = "2021"

[dependencies]
miette      = {workspace = true}
rust-embed  = {version = "8.5", features = ["debug-embed", "compression", "include-exclude"]}
thiserror   = {workspace = true}
veryl-path  = {version = "0.13.4", path = "../path"}

[build-dependencies]
merkle_hash = "3.7"
