[package]
name                  = "veryl-std"
version               = "0.16.1"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description.workspace = true
edition.workspace     = true

[dependencies]
miette      = {workspace = true}
rust-embed  = {version = "8.7", features = ["debug-embed", "compression", "include-exclude"]}
thiserror   = {workspace = true}
veryl-path  = {version = "0.16.1", path = "../path"}

[build-dependencies]
merkle_hash = "3.8"
