[package]
name                  = "veryl-synthesizer"
version               = "0.19.1"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description.workspace = true
edition.workspace     = true

[dependencies]
indent         = {workspace = true}
log            = {workspace = true}
thiserror      = {workspace = true}
veryl-analyzer = {version = "0.19.1", path = "../analyzer"}
veryl-metadata = {version = "0.19.1", path = "../metadata"}
veryl-parser   = {version = "0.19.1", path = "../parser"}

[target.'cfg(target_family = "wasm")'.dependencies]
miette = {workspace = true, features = ["fancy-no-syscall"]}

[target.'cfg(not(target_family = "wasm"))'.dependencies]
miette = {workspace = true, features = ["fancy"]}
