[package]
name              = "veryl-tests"
version           = "0.1.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette          = {workspace = true}
veryl-analyzer  = {version = "0.18.0", path = "../analyzer"}
veryl-emitter   = {version = "0.18.0", path = "../emitter"}
veryl-formatter = {version = "0.18.0", path = "../formatter"}
veryl-metadata  = {version = "0.18.0", path = "../metadata"}
veryl-parser    = {version = "0.18.0", path = "../parser"}
veryl-path      = {version = "0.18.0", path = "../path"}
veryl           = {version = "0.18.0", path = "../veryl"}

[dev-dependencies]
criterion = {workspace = true}
insta     = "1.46"

[target.'cfg(target_os = "linux")'.dev-dependencies]
pprof = {workspace = true}

[build-dependencies]
walkdir = {workspace = true}

[[bench]]
name = "benchmark"
harness = false

[package.metadata.release]
release = false
