[package]
name                  = "veryl-translator"
version               = "0.20.0"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description           = "SystemVerilog to Veryl translator"
edition.workspace     = true

[dependencies]
sv-parser       = "0.13"
thiserror       = {workspace = true}
veryl-formatter = {version = "0.20.0", path = "../formatter"}
veryl-metadata  = {version = "0.20.0", path = "../metadata"}
veryl-parser    = {version = "0.20.0", path = "../parser"}
