[package]
name                  = "veryl"
version               = "0.20.2"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description.workspace = true
edition.workspace     = true

[package.metadata.release]
tag = true
tag-name = "v{{version}}"
pre-release-replacements = [
    {file="../../support/vscode/package.json"      , search = "\"version\": \"[0-9\\.]+\",", replace = "\"version\": \"{{version}}\"," },
    {file="../../support/highlightjs//package.json", search = "\"version\": \"[0-9\\.]+\",", replace = "\"version\": \"{{version}}\"," },
]
pre-release-hook = ["../../support/scripts/tag_submodule.sh", "{{version}}"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle             = "1.0"
mimalloc            = "0.1"
clap                = {workspace = true}
clap_complete       = "4.6"
console             = {workspace = true}
fern                = "0.7.0"
futures             = {workspace = true}
handlebars          = {workspace = true}
libc                = "0.2"
log                 = {workspace = true}
once_cell           = {workspace = true}
mdbook-driver       = {workspace = true}
mdbook-preprocessor = {workspace = true}
miette              = {workspace = true}
pulldown-cmark      = {workspace = true}
regex               = {workspace = true}
serde               = {workspace = true}
serde_json          = {workspace = true}
similar             = {workspace = true}
tempfile            = {workspace = true}
thiserror           = {workspace = true}
tokio               = {workspace = true}
tokio-util          = {version = "0.7.17", features = ["codec"]}
blake3              = {workspace = true}
toml                = {workspace = true}
veryl-analyzer      = {version = "0.20.2", path = "../analyzer"}
veryl-cache         = {version = "0.20.2", path = "../cache"}
veryl-component-sys = {version = "0.1.0", path = "../component/sys"}
veryl-emitter       = {version = "0.20.2", path = "../emitter"}
veryl-formatter     = {version = "0.20.2", path = "../formatter"}
veryl-metadata      = {version = "0.20.2", path = "../metadata"}
veryl-migrator      = {version = "0.20.2", path = "../migrator"}
veryl-parser        = {version = "0.20.2", path = "../parser"}
veryl-simulator     = {version = "0.20.2", path = "../simulator"}
veryl-synthesizer   = {version = "0.20.2", path = "../synthesizer"}
veryl-path          = {version = "0.20.2", path = "../path"}
veryl-sourcemap     = {version = "0.20.2", path = "../sourcemap"}
veryl-translator    = {version = "0.20.2", path = "../translator"}

[features]
# Forwards to the simulator's profile feature and enables the per-test
# build-vs-run split report in `cmd_test` (PROFILE_SPLIT line).
profile = ["veryl-simulator/profile"]
