[package]
name = "veryl-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
semver          = {version = "1.0", features = ["serde"]}
veryl-analyzer  = {version = "0.1.5", path = "../analyzer"}
veryl-emitter   = {version = "0.1.5", path = "../emitter"}
veryl-formatter = {version = "0.1.5", path = "../formatter"}
veryl-metadata  = {version = "0.1.5", path = "../metadata"}
veryl-parser    = {version = "0.1.5", path = "../parser"}
wasm-bindgen    = "0.2"

[package.metadata.release]
release = false
