[package]
name              = "highlightgen"
version           = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow     = {workspace = true}
clap       = {workspace = true}
console    = {workspace = true}
handlebars = {workspace = true}
serde      = {workspace = true}
similar    = {workspace = true}
tempfile   = {workspace = true}

[package.metadata.release]
release = false
