[package]
name                  = "veryl-component-macros"
version               = "0.1.0"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description.workspace = true
edition.workspace     = true

[package.metadata.release]
# Block the release if the public API broke without a version bump.
pre-release-hook = ["cargo", "semver-checks", "check-release", "--package", "veryl-component-macros"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote       = "1.0"
syn         = {version = "2.0", features = ["full"]}
